--- a/src/HybridModelBinding/HybridModelBinding.csproj
+++ b/src/HybridModelBinding/HybridModelBinding.csproj
@@ -17,6 +17,7 @@
     <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.34" />
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
